--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,33 @@
 version: 2
 jobs:
-  go1.15: &base
+  go1.21: &base
     docker:
-      - image: circleci/golang:1.15
-    working_directory: /go/wd
+      - image: cimg/go:1.21
     steps:
       - run: go version
-
       - checkout
-
       - run: go test -race -v ./...
 
-  go1.14:
+  go1.20:
     <<: *base
     docker:
-      - image: circleci/golang:1.14
+      - image: cimg/go:1.20
 
-  go1.13:
+  go1.19:
     <<: *base
     docker:
-      - image: circleci/golang:1.13
+      - image: cimg/go:1.19
+
+  go1.18:
+    <<: *base
+    docker:
+      - image: cimg/go:1.18
 
 workflows:
   version: 2
   build:
     jobs:
-      - go1.15
-      - go1.14
-      - go1.13
+      - go1.21
+      - go1.20
+      - go1.19
+      - go1.18
