--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,21 @@
 language: go
 
 go:
-  - "1.13"
-  - "1.14"
-  - "1.15"
+  - "1.21"
+  - "1.20"
+
+os:
+  - linux
+  - osx
+  - windows
+
+arch:
+  - amd64
+  - i386
+  - arm64
 
 script:
-  - go test -race -coverprofile=coverage.txt -covermode=atomic ./...
+  - go test -v -race -coverprofile=coverage.txt -covermode=atomic ./...
 
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+#after_success:
+#  - bash <(curl -s https://codecov.io/bash)
