--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,22 +10,43 @@ on:
     branches: [ "master" ]
 
 jobs:
+  test:
+    strategy:
+      matrix:
+        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+        go-ver: #["1.21" , "1.20", "1.19"]
+          - "1.21"
+        include:
+          - os: "ubuntu-latest"
+            go-ver: "1.21"
+            cover: true
 
-  build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: "1.21"
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: ${{ matrix.go-ver }}
 
-    - name: Build
-      run: go build -v ./...
+      - name: Build
+        run: go build -v ./...
 
-    - name: Test
-      run: go test -v -coverprofile=coverage.txt -covermode=atomic ./...
+      - name: Test
+        run: go test -v ./...
 
-    - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v3
+      - name: Test -checkptr
+        run: go test -gcflags=-d=checkptr -v ./...
+
+      - name: Test -race
+        run: go test -race -v ./...
+
+      - name: Coverage
+        run: go test -v -coverprofile=coverage.txt -covermode=atomic ./...
+        if: ${{ matrix.cover }}
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        if: ${{ matrix.cover }}
