--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,8 +14,7 @@ jobs:
     strategy:
       matrix:
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
-        go-ver: #["1.21" , "1.20", "1.19"]
-          - "1.21"
+        go-ver: ["1.21"]
         include:
           - os: "ubuntu-latest"
             go-ver: "1.21"
