--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,14 +14,13 @@ jobs:
     strategy:
       matrix:
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
-        go-ver: ["1.21"]
+        go-ver: ["1.22", "1.21", "1.20", "1.19"]
         include:
           - os: "ubuntu-latest"
-            go-ver: "1.21"
+            go-ver: "1.22"
             cover: true
 
     runs-on: ${{ matrix.os }}
-
     steps:
       - uses: actions/checkout@v3
 
@@ -33,19 +32,19 @@ jobs:
       - name: Build
         run: go build -v ./...
 
-      - name: Test
+      - name: Test without Cover
         run: go test -v ./...
+        if: ${{ !matrix.cover }}
 
-      - name: Test -checkptr
-        run: go test -gcflags=-d=checkptr -v ./...
-
-      - name: Test -race
-        run: go test -race -v ./...
-
-      - name: Coverage
+      - name: Test with Cover
         run: go test -v -coverprofile=coverage.txt -covermode=atomic ./...
         if: ${{ matrix.cover }}
 
+      - name: Test Race
+        run: go test -race -v ./...
+
       - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
         if: ${{ matrix.cover }}
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
