--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
-        go-ver: ["1.23", "1.22", "1.21", "1.20", "1.19"]
+        go-ver: ["1.23", "1.22", "1.21", "1.20"]
         include:
           - os: "ubuntu-latest"
             go-ver: "1.23"
